--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "suppressImplicitAnyIndexErrors": true
   },
   "files": [
-    "src/globals.d.ts",
-    "src/index.tsx"
+    "src/globals.d.ts"
   ],
   "exclude": [
     "build",
